# CppObfuscator

./: .deepsource.toml  CppObfuscator.pyproj  CppObfuscator.sln  clang-tidy.md  cli.md  exe_guard.md  main.py  shell_loader.md
c_loader/: run_shell.c
crypto/: aes.py  rc4.py  string_encryptor.py  xor_mask.py
exe_guard/: exe_encryptor.py  loader_generator.py  rust_loader_generator.py
exe_guard/output/: exe_loader.cpp
obfuscator/: __init__.py  api_resolver.py  code_transformer.py  control_flow.py  dll_loader.py  jit_compiler.py  memory_protect.py  opaque_predicates.py  polymorph_engine.py  syscall_hiding.py
output/: agent_aes.key  cl.md  test_dll_obf.cpp
output/OLD/: OLD_test_gui_WORK.cpp
rules/: filter_rules.yaml
runtime_loader_rust/: Cargo.toml  build.rs  readme.md  readme.txt
runtime_loader_rust/src/: constants.rs  crypto.rs  lib.rs  main.rs  utils.rs
runtime_loader_rust/src/edr/: amsi.rs  anti_debug.rs  etw.rs  mod.rs  stealth.rs  unhook.rs
runtime_loader_rust/src/memory/: manual_map.rs  pe_loader.rs  stealth.rs
runtime_loader_rust/src/syscall/: indirect_syscall.rs  mod.rs  ntdll.rs
sample/: test_dll.cpp  test_exe.cpp  test_gui.cpp  test_input.cpp  test_input_api.cpp
shell_loader/: builder.py  loader_generator.py  raw_loader.cpp  shellcode_encryptor.py
stringguard/: backup_restore.py  decryptor_generator.py  filter_engine.py  injector.py  setup_stringguard_env.md  solution_manager.py  string_encoder.py  string_parser.py  validator.py  vcxproj_parser.py
test_payloads/: test.dll.aes  test_dll.cpp
tests/: __init__.py  check_memory.py  isolate_test_struct.pack.py  isolate_test_syscall_pack.py  test_crypto.py  test_jit.py  test_loader.py  test_memory_protect.py  test_obfuscator.py  test_syscalls.py
utils/: disassembler.py  encrypt_dll.py
(+1 files in other folders)
